--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "request": "^2.88.2",
     "ytdl-core": "^4.11.2"
   },
   "name": "yt-dl-slim",
